# raj

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION.md  README.md  main.py  pyproject.toml  transcript.txt
examples/: download_data.py  generate_signals.py  run_backtest.py
notebooks/: strategy_exploration.ipynb
raj/: config.py
raj/backtest/: engine.py  metrics.py  portfolio.py  signals.py
raj/data/: downloader.py  provider.py  storage.py  universe.py
raj/strategies/: base.py
raj/strategies/examples/: buy_hold.py
raj/utils/: dates.py
raj/visualization/: charts.py  reports.py
