[project]
name = "raj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "ta-lib>=0.6.8",
    "tqdm>=4.67.0",
    "yfinance>=0.2.38",
    "pyarrow>=15.0.0",
]

[tool.setuptools]
packages = ["raj"]
